[package]
name = "tshaon-wayland"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = "0.6.2"
thiserror = "1.0.63"
tshaon-common = { path = "../tshaon-common" }
wayland-backend = { version = "0.3.7", features = ["client_system"] }
wayland-client = "0.31.6"
wayland-protocols = { version = "0.32.4", features = ["client", "staging"] }
